<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="change_city">Change City</string>
    <string name="please_enter_city_name">Please enter city name</string>
    <string name="sunny">Sunny</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="city">City</string>
    <string name="_25">25°</string>
    <string name="_60">60%</string>
    <string name="humidity">humidity</string>
</resources>