<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3D3D3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_margin="30dp"/>

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25"
        android:layout_gravity="center"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/humidityLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/humidityIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/humidity"
                android:layout_marginBottom="5dp"/>
            
            <TextView
                android:id="@+id/humidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_60"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/windLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/windIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/wind"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/windText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 km/h"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="wind"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>
        
    </LinearLayout>

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:elevation="12dp"
        android:src="@drawable/sun"
        android:contentDescription="@string/weather_icon"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunny"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/cityNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:hint="@string/please_enter_city_name"
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/WeatherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_city"
        android:layout_marginStart="60dp"
        android:background="@drawable/background"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />

</LinearLayout>